[package]
name = "mixosc"
version = "0.0.1"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
iced_fonts = { version = "0.3.0", features = ["lucide"] }
maolan-widgets = "0.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "time"] }
