[package]
name = "mixosc"
version = "0.0.2"
edition = "2024"
description = "Rust OSC client and control surface for Behringer X32-family mixers"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/maolan/mixosc"
homepage = "https://maolan.github.io"
keywords = ["audio", "osc", "x32", "mixer"]
categories = ["multimedia::audio"]

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
iced_fonts = { version = "0.3.0", features = ["lucide"] }
maolan-widgets = "0.0.7"
tokio = { version = "1", features = ["net", "time"] }
